--- a/DASHBOARD/index.css
+++ b/DASHBOARD/index.css
@@ -52,6 +52,7 @@ body {
 .curso1 {grid-area: curso1;}
 .curso2 {grid-area: curso2;}
 .curso3 {grid-area: curso3;}
+.curso4 {grid-area: curso4;}
 
 /*Grid Alunos*/
 .container {
@@ -107,10 +108,10 @@ body {
 .containerCursos {
     display: grid;
     grid-template-areas:
-      'menu info info info info info info'
-      'menu curso1 curso1 curso1 curso1 curso1 curso1'
+      'menu curso1 curso1 curso3 curso3 curso3 curso3'
+      'menu curso1 curso1 curso3 curso3 curso3 curso3'
       'menu curso2 curso2 curso2 curso2 curso2 curso2'
-      'menu curso3 curso3 curso3 curso3 curso3 curso3'
+      'menu curso2 curso2 curso2 curso2 curso2 curso2'
       ;
 
     column-gap: 10px;
@@ -121,32 +122,26 @@ body {
 }
 
 .curso1 {
+    background-color: #c2c7ca;
+    margin-top: 10px;
     border-radius: 20px;
-    width: 98%;
-    height: 240px;
-    margin-right: 15px;
-    margin-left: 5px;
-    background-color:  #c2c7ca;
 }
 
 .curso2 {
-    
+    background-color: #c2c7ca;
+    margin-top: 10px;
+    margin-bottom: 15px;
     border-radius: 20px;
-    width: 98%;
-    height: 240px;
-    margin-right: 15px;
-    margin-left: 5px;
-    background-color:  #c2c7ca;
 }
 
 .curso3 {
+    background-color: #c2c7ca;
+    margin-top: 10px;
+    margin-right: 10px;
     border-radius: 20px;
-    width: 98%;
-    height: 240px;
-    margin-right: 15px;
-    margin-left: 5px;
-    background-color:  #c2c7ca;
 }
+
+
 /*----------------------------------*/
 
 
